[tool.poetry]
name = "klaimera"
version = "0.0.0"
description = "Automatic claimer and roller for Mudae."
authors = ["ennunpenoctal <ennunpenoctal@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py-self" = "^1.8.1"
colorama = "^0.4.4"
aiofiles = "^0.7.0"
playsound2 = "^0.1"
tomlkit = "^0.7.2"
notify-run = "^0.0.14"
asteval = "^0.9.25"
uvloop = "^0.15.2"

[tool.poetry.dev-dependencies]
types-aiofiles = "^0.1.5"
"discord.py-stubs" = "^1.7.3"
black = "^21.6b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
